K8S/service.yml
apiVersion: v1
kind: Service 
metadata:
  name: task-manager-nodeport
spec:
  selector:
    app: task-manager
  ports:
    - protocol: TCP
      port: 80           #Port on service
      targetPort: 8080   #Port on Pods
  type: NodePort
